--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ override.tf.json
 # example: *tfplan*
 
 # Ignore CLI configuration files
-.terraformrc
-terraform.rc
+.terraform
 .terraform.lock.hcl
 /aws
+variables-creds.tf
+
